# vekolom_refactor

./: .backupignore  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_home_init.py  0002_pricelist_init.py  0003_contacts_init.py  0004_add_apikeys.py
app/: main.py
app/admin/: __init__.py  admin.py  fields.py  setup.py
app/admin/templates/: index.html
app/admin/utils/: __init__.py  photo_upload.py  thumbnail.py
app/admin/views/: __init__.py  apikeys.py  base.py  contacts.py  home.py  pricelist.py
app/infrastructure/: set_logging.py  uow.py
app/infrastructure/backup/: __init__.py  archiver.py  cli.py  ignore_matcher.py  lock.py  logging_utils.py  manifest.py  retention.py  service.py  webdav_client.py
app/infrastructure/celery/: __init__.py  tasks.py  worker.py
app/infrastructure/db/: async_database.py  base.py  bootstrap.py
app/infrastructure/media/: image_processor.py  storage.py
app/infrastructure/web/: asset_manifest.py  assets.py  bundler.py  captcha.py  csrf.py  css_assets.py  legacy_assets.py
app/ioc/: container.py  providers.py
app/modules/amp/presentation/: router.py
app/modules/apikeys/application/: use_cases.py
app/modules/apikeys/domain/: entities.py  repositories.py
app/modules/apikeys/infrastructure/: repositories.py  sa_models.py
app/modules/contacts/application/: use_cases.py
app/modules/contacts/domain/: dto.py  entities.py  repositories.py
app/modules/contacts/infrastructure/: repositories.py  sa_models.py
app/modules/contacts/presentation/: router.py
app/modules/home/application/: use_cases.py
app/modules/home/domain/: dto.py  entities.py  repositories.py
app/modules/home/infrastructure/: repositories.py  sa_models.py
app/modules/home/presentation/: router.py
app/modules/pricelist/application/: excel_export.py  use_cases.py
app/modules/pricelist/domain/: dto.py  entities.py  repositories.py
app/modules/pricelist/infrastructure/: repositories.py  sa_models.py
app/modules/pricelist/presentation/: router.py
app/modules/pwa/infrastructure/: notifier.py
app/modules/pwa/presentation/: router.py
app/modules/seo/presentation/: router.py
app/settings/: config.py
app/templates/: base.html
app/templates/amp/: base.html  contacts.html  home.html  pricelist.html
app/templates/contacts/: contacts.html
app/templates/home/: home.html
app/templates/pricelist/: pricelist.html
app/templates/pwa/: offline.html
frontend/: Dockerfile  package.json  vite.config.js
infrastructure/: .env.example  docker-compose.service.nginx.yml  docker-compose.yml
infrastructure/services/nginx/: Dockerfile  README.md  entrypoint.sh  nginx.conf
infrastructure/services/nginx/apps/vekolom/: locations.conf  upstream.conf
infrastructure/services/nginx/apps/vekolom/dev/: security_headers.conf  server.conf
infrastructure/services/nginx/apps/vekolom/prod/: security_headers.conf  server.conf
infrastructure/services/nginx/snippets/: bot_protection.conf  compression.conf  proxy_params.conf
legacy/: backup.sh  exceltask.py  mail_backup_task.py
utils/: build_legacy.py  tree.py  wait-for-services.py
