[project]
name = "vekolom"
version = "0.1.0"
description = "Vekolom FastAPI service"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "gunicorn>=22,<23",
  "pydantic>=2.9,<3",
  "jinja2>=3.1.6",
  "sqlalchemy>=2.0.45",
  "psycopg2-binary>=2.9.11",
  "alembic>=1.17.2",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "starlette-admin>=0.16.0",
  "user-agents>=2.2.0",
  "dishka>=1.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
